Bug 1772125 - Implement MLS fallback for GeoclueLocationProvider. r=maciejsszmigiero

Even tho it is a configuration error, it is extremely confusing to click
"Allow" in Firefox and get a "denied access" error.

Instead fall back to MLS once we error, like other location providers
do.

MANUAL PUSH: Maciej doesn't have editbugs to approve patches yet, see
bug 1772813.

Differential Revision: https://phabricator.services.mozilla.com/D147864